# fram-cam-plus

./: .gitignore  LICENSE  README.md  build_fram_cam.py  compile_and_run.py  config.py  fram-cam-plus.pyproject  main.py  pyproject.toml  requirements.txt
data/ddl/fram_cam/: BACKDECK_BIOS_LOG.sql  BACKDECK_BIOS_VW.sql  BACKDECK_HAULS_LOG.sql  BIO_OPTIONS_VW.sql  FRAM_CAM_BIOS.sql  FRAM_CAM_CATCH.sql  FRAM_CAM_HAULS.sql  FRAM_CAM_STATE.sql  IMAGES.sql  IMAGES_VW.sql  load_fram_cam_db_local.sql
data/ddl/trawl_backdeck/tables/: fram_cam_transfer_vw.sql
py/: app.py  cam_controls.py  camera_manager.py  cloud_uploader.py  config.py  data_selector.py  fram_cam_state.py  fram_camera.py  image_capture.py  image_manager.py  images_manager.py  images_model.py  logger.py  qsqlite.py  qt_models.py  settings.py  specimens.py  style.py  trawl_backdeck_db.py  utils.py
qml/: AppStyle.qml  MainWindow.qml  main.qml
qml/components/: CredentialsDialog.qml  DataSelectorBar.qml  ImageEditorArea.qml  ImageEditorBar.qml  LoggingDialog.qml  YesNoDialog.qml
qml/controls/: ControlSwitch.qml  DropDown.qml  FramCamButton.qml  FramCamCheckbox.qml  FramCamComboBox.qml  FramCamGroupBox.qml  FramCamMenuButton.qml  FramCamNavButton.qml  FramCamProgressBar.qml  FramCamTextField.qml  FramCamWindowButton.qml  LeftMenuButton.qml  ToggleButton.qml  WindowControlButton.qml
qml/pages/: CapturePage.qml  CaptureScreen.qml  ImageManagerPage.qml  SettingsPage.qml  SpeciesPage.qml  UploadPage.qml  reportScreen.qml  speciesScreen.qml
qrc/: qresources.py  qresources.qrc
