[tool.poetry]
name = "fram-cam-plus"
version = "2024.00+1"
description = "PySide6 + Qt Camera Tablet App"
authors = ["Jim Fellows <james.fellows@noaa.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "6.6.2"
opencv-python = "4.9.0.80"
numpy = "1.26.4"
pyzbar = "^0.1.9"
araviq6 = "^2.1.1"
cx-freeze = "^6.15.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Repository = "https://github.com/jimfellows/fram-cam-plus"

[tool.cxfreeze]
executables = [
    {script = "main.py", base="Win32GUI"}
]

[tool.cxfreeze.build_exe]
excludes = []
packages=["PySide6", "pyzbar", "cv2", 'araviq6', 'sqlite3',"shiboken6", "encodings"]
include_files = [
  ['py', 'lib/py'],  # puts local py imports into lib
  ['qrc', 'lib/qrc'],
  ['data/trawl_backdeck.db', 'lib/data/trawl_backdeck.db'],   # data also into lib
  ['venv/lib/shiboken6', 'lib/shiboken6'],  # WARNING: this is currently hardcoded.  CX freeze isntt hooking all shiboken DLLs
  ['C:/Users/jim-f/dev/fram-cam-plus/venv/Lib/site-packages/pyzbar/libiconv.dll', 'lib/libiconv.dll'],  # did adding opencv resolve the need for this?
  ]
